--- a/index.html
+++ b/index.html
@@ -27,52 +27,58 @@
     <!-- Timeblocks go here -->
 
     <!--9 am timeblock-->
-    <div id='9_am' data-time="9" class="row time-block">
+
+    <div id='9_am' class="row time-block">
       <div class="col-sm-1 hour">9AM</div>
-      <textarea class="col-sm-10 description"></textarea>
+      <textarea class="col-sm-10 description eventLog"></textarea>
       <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
-     <!--10 am timeblock-->
-    <div id="10_am" data-time="10" class="row time-block">
+    <!--10 am timeblock-->
+    <div id="10_am" class="row time-block">
       <div class="col-sm-1 hour">10AM</div>
-      <textarea class="col-sm-10 description"></textarea>
+      <textarea class="col-sm-10 description eventLog"></textarea>
       <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
-     <!--11 am timeblock-->
-    <div id="11_am" data-time="11" class="row time-block">
+    <!--11 am timeblock-->
+    <div id="11_am" class="row time-block">
       <div class="col-sm-1 hour">11AM</div>
-      <textarea class="col-sm-10 description"></textarea>
+      <textarea class="col-sm-10 description eventLog"></textarea>
       <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
-     <!--12 pm timeblock-->
-    <div id='12_pm' data-time="12" class="row time-block">
+    <!--12 pm timeblock-->
+    <div id='12_pm' class="row time-block">
       <div class="col-sm-1 hour">12PM</div>
-      <textarea class="col-sm-10 description"></textarea>
+      <textarea class="col-sm-10 description eventLog"></textarea>
       <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
-    <div id="1_pm" data-time="13" class="row time-block">
+    <!--1 pm timeblock-->
+    <div id="1_pm" class="row time-block">
       <div class="col-sm-1 hour">1PM</div>
-      <textarea class="col-sm-10 description"></textarea>
+      <textarea class="col-sm-10 description eventLog"></textarea>
       <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
-    <div id="2_pm" data-time="14" class="row time-block">
+    <!--2 pm timeblock-->
+    <div id="2_pm" class="row time-block">
       <div class="col-sm-1 hour">2PM</div>
-      <textarea class="col-sm-10 description"></textarea>
+      <textarea class="col-sm-10 description eventLog"></textarea>
       <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
-    <div id="3_pm" data-time="15" class="row time-block">
+    <!--3 pm timeblock-->
+    <div id="3_pm" class="row time-block">
       <div class="col-sm-1 hour">3PM</div>
-      <textarea class="col-sm-10 description"></textarea>
+      <textarea class="col-sm-10 description eventLog"></textarea>
       <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
-    <div id='4_pm' data-time="16" class="row time-block">
+    <!--4 pm timeblock-->
+    <div id='4_pm' class="row time-block">
       <div class="col-sm-1 hour">4PM</div>
-      <textarea class="col-sm-10 description"></textarea>
+      <textarea class="col-sm-10 description eventLog"></textarea>
       <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
-    <div id='5_pm' data-time="17" class="row time-block">
+    <!--5 pm timeblock-->
+    <div id='5_pm' class="row time-block">
       <div class="col-sm-1 hour">5PM</div>
-      <textarea class="col-sm-10 description"></textarea>
+      <textarea class="col-sm-10 description eventLog"></textarea>
       <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
   </div>
