--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <h2 class="lead">A simple calendar app for scheduling your work day</h2>
-    <h3 class="lead">Click the calendar icon to save your entry</h3>
+    <h3 class="lead">Click the calendar icon to save your task entry. If you wish to update your entry, simply delete and type in a new task and save your entry again.</h3>
     <p id="currentDay" class="date-display">00:00:00</p>
   </header>
 
@@ -28,64 +28,69 @@
 
     <!--9 am timeblock-->
 
-    <div id='9_am' class="row time-block">
-      <div class="col-sm-1 hour">9AM</div>
-      <textarea class="col-sm-10 description eventLog"></textarea>
-      <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
+    <div id='9' class="row time-block">
+      <div class="col-1 hour">9AM</div>
+      <textarea class="col-10 description eventLog"></textarea>
+      <button class="col-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
     <!--10 am timeblock-->
-    <div id="10_am" class="row time-block">
-      <div class="col-sm-1 hour">10AM</div>
-      <textarea class="col-sm-10 description eventLog"></textarea>
-      <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
+    <div id="10" class="row time-block">
+      <div class="col-1 hour">10AM</div>
+      <textarea class="col-10 description eventLog"></textarea>
+      <button class="col-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
     <!--11 am timeblock-->
-    <div id="11_am" class="row time-block">
-      <div class="col-sm-1 hour">11AM</div>
-      <textarea class="col-sm-10 description eventLog"></textarea>
-      <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
+    <div id="11" class="row time-block">
+      <div class="col-1 hour">11AM</div>
+      <textarea class="col-10 description eventLog"></textarea>
+      <button class="col-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
     <!--12 pm timeblock-->
-    <div id='12_pm' class="row time-block">
-      <div class="col-sm-1 hour">12PM</div>
-      <textarea class="col-sm-10 description eventLog"></textarea>
-      <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
+    <div id='12' class="row time-block">
+      <div class="col-1 hour">12PM</div>
+      <textarea class="col-10 description eventLog"></textarea>
+      <button class="col-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
     <!--1 pm timeblock-->
-    <div id="1_pm" class="row time-block">
-      <div class="col-sm-1 hour">1PM</div>
-      <textarea class="col-sm-10 description eventLog"></textarea>
-      <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
+    <div id="13" class="row time-block">
+      <div class="col-1 hour">1PM</div>
+      <textarea class="col-10 description eventLog"></textarea>
+      <button class="col-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
     <!--2 pm timeblock-->
-    <div id="2_pm" class="row time-block">
-      <div class="col-sm-1 hour">2PM</div>
-      <textarea class="col-sm-10 description eventLog"></textarea>
-      <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
+    <div id="14" class="row time-block">
+      <div class="col-1 hour">2PM</div>
+      <textarea class="col-10 description eventLog"></textarea>
+      <button class="col-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
     <!--3 pm timeblock-->
-    <div id="3_pm" class="row time-block">
-      <div class="col-sm-1 hour">3PM</div>
-      <textarea class="col-sm-10 description eventLog"></textarea>
-      <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
+    <div id="15" class="row time-block">
+      <div class="col-1 hour">3PM</div>
+      <textarea class="col-10 description eventLog"></textarea>
+      <button class="col-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
     <!--4 pm timeblock-->
-    <div id='4_pm' class="row time-block">
-      <div class="col-sm-1 hour">4PM</div>
-      <textarea class="col-sm-10 description eventLog"></textarea>
-      <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
+    <div id='16' class="row time-block">
+      <div class="col-1 hour">4PM</div>
+      <textarea class="col-10 description eventLog"></textarea>
+      <button class="col-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
     <!--5 pm timeblock-->
-    <div id='5_pm' class="row time-block">
-      <div class="col-sm-1 hour">5PM</div>
-      <textarea class="col-sm-10 description eventLog"></textarea>
-      <button class="col-sm-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
+    <div id='17' class="row time-block">
+      <div class="col-1 hour">5PM</div>
+      <textarea class="col-10 description eventLog"></textarea>
+      <button class="col-1 saveBtn btn"><i class="far fa-calendar-alt fa-lg"></i></button>
     </div>
   </div>
 
-
-
-
+  <footer class="mt-5 bg-light text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: #d3d3d3;">
+     
+      <p class="text-dark">Day Planner</p>
+    </div>
+    <!-- Copyright -->
+  </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="script.js"></script>
