--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: #d3d3d3;">
      
-      <p class="text-dark">Day Planner</p>
+      <p class="footer-text">Day Scheduler</p>
     </div>
     <!-- Copyright -->
   </footer>
